syntax = "proto3";

package campaign;

import "entities.proto";

service CampaignService {
    rpc getCampaign (GetCampaignRequest) returns (GetCampaignResponse);
    rpc createCampaign (CreateCampaignRequest) returns (CreateCampaignResponse);
    rpc updateCampaign (UpdateCampaignRequest) returns (UpdateCampaignResponse);
    rpc deleteCampaign (DeleteCampaignRequest) returns (DeleteCampaignResponse);
    rpc search (SearchCampaignRequest) returns (SearchCampaignResponse);
}

message UpdateCampaignRequest {
    entities.CampaignDTO campaign = 1;
}

message UpdateCampaignResponse {
    entities.CampaignDTO campaign = 1;
}

message CreateCampaignRequest {
    entities.CampaignDTO campaign = 1;
}

message CreateCampaignResponse {
    entities.CampaignDTO campaign = 1;
}

message GetCampaignRequest {
    string campaignId = 1;
}

message GetCampaignResponse {
    entities.CampaignDTO campaign = 1;
}

message DeleteCampaignRequest {
    string campaignId = 1;
}

message DeleteCampaignResponse {
    // No fields required for a 200 status response
}

message SearchCampaignRequest {
    string entityName = 1;
    entities.SearchQueryDTO query = 2;
    entities.ContextDTO context = 3;
}

message SearchCampaignResponse {
    repeated entities.CampaignDTO campaigns = 1;
    int32 totalResults = 2;
    int32 totalPages = 3;
    int32 currentPage = 4;
}

